@startuml
skinparam classAttributeIconSize 0

class Farmacia {
  - Integer nif
  - String email
  - String morada
}

class Parque {
  -Integer numeroMaximo
}

class Estacionamento {
  -Integer numeroLote
  -Integer carregador
  -Integer idParque
  +Estacionamento(numeroLote, carregador, idParque)
}

class FarmaciaDB {
  +getFarmaciaByNIF(nif)
}

class ParqueDB {
  +getLstParquesByFarmaciaNif(nif)
  +getNumMaxByFarmaciaNifParqueId(nif, idParque)
}

class EstacionamentoDB {
  +Estacionamento novoEstacionamento(numeroLote, carregador, idParque)
  +registaEstacionamento(estac)
  +validaEstacionamento(estac)
}

class InserirEstacionamentosController {
    +getFarmaciaByNIF(nif)
    +getListaParquesByFarmaciaNif(nif)
    +getNumMaxByFarmaciaNifParqueId(nif, idParque)
    +novoEstacionamento(numeroLote, carregador, idParque)
    +registaEstacionamentos(lEstac)
}

class InserirEstacionamentosUI {
}

InserirEstacionamentosUI ..> InserirEstacionamentosController
InserirEstacionamentosController ..> FarmaciaDB
InserirEstacionamentosController ..> Farmacia
InserirEstacionamentosController ..> ParqueDB
InserirEstacionamentosController ..> Parque
InserirEstacionamentosController ..> EstacionamentoDB
InserirEstacionamentosController ..> Estacionamento

FarmaciaDB "1" --> "*" Farmacia : possui
Farmacia "1" --> "*" Parque : possui
ParqueDB "1" --> "*" Parque : possui
Parque "1" --> "*" Estacionamento : tem
EstacionamentoDB "1" --> "*" Estacionamento : possui

@enduml
